:bug: put toast z-index higher

--- a/public/styles/toast.css
+++ b/public/styles/toast.css
@@ -14,6 +14,6 @@
   font-weight: 400;
   text-align: left;
   color: #f2f2f2;
-  z-index: 1004;
+  z-index: 3000;
   transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
